--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,11 @@
     html {
       cursor: url("<%= BASE_URL %>cursur.png"), auto;
     }
-
     body {
       padding-bottom: 90px;
+    }
+    .nes-progress {
+      height: 25px;
     }
   </style>
 </head>
